--- a/scss/activities/_forum.scss
+++ b/scss/activities/_forum.scss
@@ -196,7 +196,7 @@
         &::before {
           @extend %icon-before;
           @include fa-content($fa-thumbs-up);
-          color: #28C382;
+          color: $pea-green;
           margin-right: 0;
           padding: 0 4px;
           position: absolute;
