--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import "base/icons";
 @import "base/common";
 @import "base/typography";
+@import "base/lists";
 
 // @import "layout/grid";
 @import "layout/footer";
